Corrected spacing post-scroll

--- a/src/styles/Days.css
+++ b/src/styles/Days.css
@@ -11,6 +11,7 @@
     text-align: center;
     font-size: 2em;
     margin-bottom: 0;
+    padding-top: 3em;
 }
 
 /* container for columns */
